<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.simarro.practicas.goliath_national_bank.vista.MainActivity">
    <item
        android:id="@+id/pos_global_toolbar"
        android:title="@string/pos_global"
        android:orderInCategory="1"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/operations_toolbar"
        android:title="@string/operations"
        android:orderInCategory="2"
        app:showAsAction="never"
        />

    <item
    android:id="@+id/change_pass_toolbar"
    android:title="@string/passwd"
    android:orderInCategory="3"
    app:showAsAction="never"
    />
    <item
        android:id="@+id/cajeros_toolbar"
        android:title="@string/cajeros"
        android:orderInCategory="4"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_settings_toolbar"
        android:title="@string/action_settings"
        android:orderInCategory="5"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/close_sesion_toolbar"
        android:title="@string/log_out"
        android:orderInCategory="6"
        app:showAsAction="never"
        />





</menu>